hide swagger
