# docs/swagger.json
@@ -17,7 +17,7 @@
     "host": "localhost",
     "paths": {
         "/api/v1/ping": {
-            "post": {
+            "get": {
                 "consumes": [
                     "application/json"
                 ],
@@ -64,7 +64,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/serializer.UserList"
+                            "$ref": "#/definitions/serializer.UserToken"
                         }
                     }
                 }
@@ -89,8 +89,34 @@
                 }
             }
         },
-        "serializer.UserList": {
-            "type": "object"
+        "serializer.UserToken": {
+            "type": "object",
+            "properties": {
+                "avatar": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "integer"
+                },
+                "expires_at": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "nickname": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
         }
     }
 }
